create and fix api paymentv2
